Update to v2.9 + new output

--- a/src/app/pages/guides/cfar-exercise-flow/cfar-exercise-flow.component.html
+++ b/src/app/pages/guides/cfar-exercise-flow/cfar-exercise-flow.component.html
@@ -17,6 +17,7 @@
                     [contractId]="contractId"
                     [hyperwalletUrl]="hyperwalletUrl"
                     (airlineRefundSelected)="onAirlineRefundSelected($event)"
+                    (flowCompleted)="onFlowCompleted()"
                 ></hopper-cfar-exercise-flow>
             </div>
         </mat-tab>
