--- a/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.scss
+++ b/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.scss
@@ -65,11 +65,10 @@
                 @if ($is-dark == false) {
                     background: map-get($warn-palette, 50);
                 }
-
+                
                 border: 1px solid map-get($warn-palette, default);
-                width: 100%;
-                text-align: center;
-                color: map-get($warn-palette, default);
+                padding: 0px 16px;
+                color: black;
             }
 
             a {
