fix for v12 migration

--- a/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.scss
+++ b/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.scss
@@ -93,7 +93,7 @@
                 border-radius: 0px;
                 
                 &:hover {
-                    @include mat-elevation(4);
+                    @include mat.elevation(4);
                 }
 
                 &.active {
@@ -117,10 +117,7 @@
             }
 
             .error-message {
-                @if ($is-dark == false) {
-                    background: map-get($warn-palette, 50);
-                }
-                
+                background: map-get($warn-palette, 50);
                 border: 1px solid map-get($warn-palette, default);
                 padding: 0px 16px;
                 color: black;
