--- a/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.scss
+++ b/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.scss
@@ -62,10 +62,7 @@
             }
 
             .error-message {
-                @if ($is-dark == false) {
-                    background: map-get($warn-palette, 50);
-                }
-                
+                background: map-get($warn-palette, 50);
                 border: 1px solid map-get($warn-palette, default);
                 padding: 0px 16px;
                 color: black;
@@ -80,7 +77,7 @@
                 border-radius: 0px;
                 
                 &:hover {
-                    @include mat-elevation(4);
+                    @include mat.elevation(4);
                 }
 
                 &.active {
