update angular material

--- a/projects/angular-sdk/src/styles/theme.scss
+++ b/projects/angular-sdk/src/styles/theme.scss
@@ -1,4 +1,4 @@
-@use '~@angular/material' as mat;
+@use '@angular/material' as mat;
 
 // Import component mixins here to enable theming for them
 @import "../components/cfar-offer-banner/cfar-offer-banner.component.scss";
