--- a/src/app/pages/guides/cfar-offer-dialog/cfar-offer-dialog.component.html
+++ b/src/app/pages/guides/cfar-offer-dialog/cfar-offer-dialog.component.html
@@ -6,7 +6,7 @@
 
         <mat-tab label="Overview">
             <div class="p-16">
-                <button mat-flat-button color="primary" (click)="onOpenCfarOfferDialog()"
+                <button mat-flat-button color="accent" (click)="onOpenCfarOfferDialog()"
                     aria-label="Open CFAR Offer dialog">
                     Open CFAR Offer dialog
                 </button>
