--- a/projects/angular-sdk/src/components/cfar-offer-banner/cfar-offer-banner.component.scss
+++ b/projects/angular-sdk/src/components/cfar-offer-banner/cfar-offer-banner.component.scss
@@ -34,8 +34,8 @@
         }
 
         mat-card {
-            background: map-get($primary-palette, 50) !important;
-            color: map-get($primary-palette, "50-contrast") !important;
+            background: map-get($accent-palette, 50) !important;
+            color: map-get($accent-palette, "50-contrast") !important;
             border-radius: 0px;
 
             .check-icon {
