--- a/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.scss
+++ b/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.scss
@@ -35,8 +35,8 @@
         }
         
         .mat-dialog-title {
-            background-color: map-get($accent-palette, 900);
-            color: map-get($accent-palette, "900-contrast");
+            background-color: map-get($primary-palette, 900);
+            color: map-get($primary-palette, "900-contrast");
             margin: 0px;
 
             .powered-by-container {
@@ -69,7 +69,7 @@
             }
 
             a {
-                color: map-get($primary-palette, default);
+                color: map-get($accent-palette, default);
             }
 
             mat-card {
@@ -81,7 +81,7 @@
                 }
 
                 &.active {
-                    border: 2px solid map-get($primary-palette, default);
+                    border: 2px solid map-get($accent-palette, default);
                 }
 
                 .offer-title {
