--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="mat-elevation-z4" color="primary" fxLayout="row" fxLayoutAlign="space-between center">
     <div fxLayout="row" fxLayoutAlign="start center">
-        <span fxHide.lt-md routerLink="/" class="pointer">Hopper Cloud Airlines - Angular SDK - {{ version }}</span>
-        <span fxHide.gt-sm routerLink="/" class="pointer">{{ version }}</span>
+        <span fxHide.lt-md routerLink="/guides/{{ currentPartnerId }}" class="pointer">Hopper Cloud Airlines - Angular SDK - {{ version }}</span>
+        <span fxHide.gt-sm routerLink="/guides/{{ currentPartnerId }}" class="pointer">{{ version }}</span>
     </div>
 
     <div fxLayout="row" fxLayoutAlign="end center">
