--- a/src/styles.scss
+++ b/src/styles.scss
@@ -165,7 +165,7 @@ $hopper-light-theme: mat.define-light-theme((
 }
 
 // ----------------------------------------------------------
-// OVERRIDEN FOR DOCUMENTATION PURPOSE (Managed by the SDK)
+// OVERRIDDEN FOR DOCUMENTATION PURPOSE (Managed by the SDK)
 // ----------------------------------------------------------
 
 .theme-light-blue {
