--- a/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
@@ -71,7 +71,7 @@
                 </div>
 
                 <div fxFlex="100" fxLayout="row" fxLayoutAlign="end center">
-                    <img class="powered-by-image" src="assets/powered-by-hopper.svg" />
+                    <img class="powered-by-image" src="{{ imageBasePath || '' }}assets/powered-by-hopper.svg" />
                 </div>
                 
             </div>
