--- a/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
@@ -30,7 +30,7 @@
                             </div>
                         </ng-container>
 
-                        <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px">
+                        <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px" (click)="onOpenTermsAndConditions()">
                             <a href="#" attr.aria-describedby="{{ 'COMMON.TERMS_LINK_TEXT' | translate }}" target="_blank">
                                 {{ 'COMMON.TERMS_LINK_TEXT' | translate }}
                             </a>
